<resources>
    <string name="app_name">AndroidHW1</string>
    <string name="btn_c">C</string>
    <string name="btn_plus_minus">+/-</string>
    <string name="btn_rate">%</string>
    <string name="btn_division">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_0">0</string>
    <string name="btn_123456789">123456789</string>
    <string name="btn_dot">.</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_equal">=</string>

</resources>