<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/mini_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="end"
        android:padding="@dimen/left_display_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/size_mini_display_text"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="end"
        android:text="@string/display"
        android:paddingLeft="@dimen/left_display_padding"
        android:paddingTop="@dimen/top_display_padding"
        android:paddingRight="@dimen/left_display_padding"
        android:paddingBottom="@dimen/top_display_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/size_display_text" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:columnCount="4"
        android:rowCount="5">

        <TextView
            android:id="@+id/btn_c"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/border_white_back"
            android:gravity="center"
            android:text="@string/btn_c"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_plus_minus"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/border_white_back"
            android:gravity="center"
            android:text="@string/btn_plus_minus"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_rate"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_rate"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_division"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_red_back"
            android:text="@string/btn_division"
            android:textColor="@color/white"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_7"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_7"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_8"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_8"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_9"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_9"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_multiplication"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_red_back"
            android:text="@string/btn_multiplication"
            android:textColor="@color/white"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_4"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_4"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_5"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_6"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_6"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_minus"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_red_back"
            android:text="@string/btn_minus"
            android:textColor="@color/white"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_1"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_2"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_2"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_3"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_3"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_plus"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_red_back"
            android:text="@string/btn_plus"
            android:textColor="@color/white"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_0"
            android:layout_columnSpan="2"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_0"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"/>

        <TextView
            android:id="@+id/btn_dot"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_white_back"
            android:text="@string/btn_dot"
            android:textColor="@color/black"
            android:textSize="@dimen/size_btn_text" />

        <TextView
            android:id="@+id/btn_equal"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:background="@drawable/border_red_back"
            android:text="@string/btn_equal"
            android:textColor="@color/white"
            android:textSize="@dimen/size_btn_text" />
    </GridLayout>


</LinearLayout>